--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -3,11 +3,11 @@
         "message": "Speichern von Webseiten als selbstentpackende HTML/ZIP-Hybriddateien",
         "description": "Description of the extension."
     },
-    "commandSaveTab": {
-        "message": "Speichern der aktuellen Tab oder des ausgewählten Inhalts",
-        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
-    },
-    "commandSaveAllTabs": {
+    "commandSaveSelectedTabs": {
+		"message": "Speichern der ausgewählten Tabs oder ihrer ausgewählten Inhalte",
+		"description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
+	},
+	"commandSaveAllTabs": {
         "message": "Speichern aller Tabs",
         "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
     },
