--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -3,11 +3,11 @@
         "message": "Sauvegardez vos pages web sous forme de fichier hybride HTML/ZIP",
         "description": "Description of the extension."
     },
-    "commandSaveTab": {
-        "message": "Sauver l'onglet courant ou le contenu sélectionné",
-        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
-    },
-    "commandSaveAllTabs": {
+    "commandSaveSelectedTabs": {
+		"message": "Sauvegarder les onglets sélectionnés ou leurs contenus sélectionnés",
+		"description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
+	},
+	"commandSaveAllTabs": {
         "message": "Sauver tous les onglets",
         "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
     },
