--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -3,9 +3,9 @@
         "message": "Web ページを自己解凍型の HTML / ZIP ハイブリッドファイルとして保存する",
         "description": "Description of the extension."
     },
-    "commandSaveTab": {
-        "message": "Save the current tab or the selected content",
-        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    "commandSaveSelectedTabs": {
+        "message": "Save the selected tabs or their selected contents",
+        "description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
     },
     "commandSaveAllTabs": {
         "message": "すべてのタブを保存",
