--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -3,9 +3,9 @@
         "message": "Zapisuj strony internetowe jako samorozpakowujące się hybrydowe pliki HTML/ZIP.",
         "description": "Description of the extension."
     },
-    "commandSaveTab": {
-        "message": "Zapisz bieżącą kartę lub wybraną zawartość",
-        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    "commandSaveSelectedTabs": {
+        "message": "Save the selected tabs or their selected contents",
+        "description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
     },
     "commandSaveAllTabs": {
         "message": "Zapisz wszystkie karty",
