--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -3,9 +3,9 @@
         "message": "将页面保存到自解压式 HTML/ZIP 混合文件中",
         "description": "Description of the extension."
     },
-    "commandSaveTab": {
-        "message": "保存当前标签页或选中部分",
-        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    "commandSaveSelectedTabs": {
+        "message": "Save the selected tabs or their selected contents",
+        "description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
     },
     "commandSaveAllTabs": {
         "message": "保存所有标签页",
