--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -3,9 +3,9 @@
         "message": "將頁面保存到自解壓式 HTML/ZIP 混合文件中",
         "description": "Description of the extension."
     },
-    "commandSaveTab": {
-        "message": "保存當前標籤頁或選中部分",
-        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    "commandSaveSelectedTabs": {
+        "message": "保存選中標籤頁或其中的選中內容",
+        "description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
     },
     "commandSaveAllTabs": {
         "message": "保存所有標籤頁",
@@ -52,7 +52,7 @@
         "description": "Menu entry (SingleFileZ button only): 'Save tabs'"
     },
     "menuSaveSelectedTabs": {
-        "message": "保存當前標籤頁",
+        "message": "保存選中標籤頁",
         "description": "Menu entry: 'Save selected tabs'"
     },
     "menuSaveUnpinnedTabs": {
@@ -436,7 +436,7 @@
         "description": "Options 'Reset' button tooltip"
     },
     "optionsResetConfirm": {
-        "message": "請確認是否要對所有選項或當前配置文件進行重置",
+        "message": "確認重置所有選項或當前配置文件",
         "description": "Popup text 'Confirm the reset of all options or the current profile' in the options page"
     },
     "optionsResetAllButton": {
