--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -403,6 +403,10 @@
         "message": "maximum size (MB)",
         "description": "Options page label: 'maximum size (MB)'"
     },
+    "optionPassReferrerOnError": {
+        "message": "pass \"Referer\" header after a cross-origin request error",
+        "description": "Options page label: 'pass \"Referer\" header after a cross-origin request error'"
+    },
     "optionSaveRawPage": {
         "message": "save raw page",
         "description": "Options page label: 'save raw page'"
