--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -403,7 +403,11 @@
         "message": "taille maximale (Mo)",
         "description": "Options page label: 'maximum size (MB)'"
     },
-    "optionSaveRawPage": {
+    "optionPassReferrerOnError": {
+		"message": "passer l'en-tête \"Referer\" après une erreur de requête multi-origine",
+		"description": "Options page label: 'pass \"Referer\" header after a cross-origin request error'"
+	},
+	"optionSaveRawPage": {
         "message": "sauvegarder la page brute",
         "description": "Options page label: 'save raw page'"
     },
