--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -403,7 +403,11 @@
         "message": "maksymalny rozmiar (MB)",
         "description": "Options page label: 'maximum size (MB)'"
     },
-    "optionSaveRawPage": {
+    "optionPassReferrerOnError": {
+		"message": "pass \"Referer\" header after a cross-origin request error",
+		"description": "Options page label: 'pass \"Referer\" header after a cross-origin request error'"
+	},
+	"optionSaveRawPage": {
         "message": "zapisuj surową stronę",
         "description": "Options page label: 'save raw page'"
     },
