--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -403,6 +403,10 @@
 		"message": "максимальный размер (МБ)",
 		"description": "Options page label: 'maximum size (MB)'"
 	},
+	"optionPassReferrerOnError": {
+		"message": "pass \"Referer\" header after a cross-origin request error",
+		"description": "Options page label: 'pass \"Referer\" header after a cross-origin request error'"
+	},
 	"optionSaveRawPage": {
 		"message": "сохранить исходную страницу",
 		"description": "Options page label: 'save raw page'"
