--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -403,6 +403,10 @@
 		"message": "максимальний розмір (МБ)",
 		"description": "Options page label: 'maximum size (MB)'"
 	},
+	"optionPassReferrerOnError": {
+		"message": "pass \"Referer\" header after a cross-origin request error",
+		"description": "Options page label: 'pass \"Referer\" header after a cross-origin request error'"
+	},	
 	"optionSaveRawPage": {
 		"message": "зберегти вихідну сторінку",
 		"description": "Options page label: 'save raw page'"
