update Russian translation

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -3,14 +3,14 @@
 		"message": "охранение веб-страниц в виде самораспаковывающихся гибридных файлов HTML/ZIP",
 		"description": "Description of the extension."
 	},
-    "commandSaveSelectedTabs": {
+	"commandSaveSelectedTabs": {
 		"message": "Save the selected tabs or their selected contents",
 		"description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
 	},
 	"commandSaveAllTabs": {
-        "message": "Сохранить все вкладки",
-        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
-    },
+		"message": "Сохранить все вкладки",
+		"description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+	},
 	"menuSavePage": {
 		"message": "Сохранить страницу с помощью SingleFileZ",
 		"description": "Menu entry: 'Save page with SingleFileZ'"
@@ -404,7 +404,7 @@
 		"description": "Options page label: 'maximum size (MB)'"
 	},
 	"optionPassReferrerOnError": {
-		"message": "pass \"Referer\" header after a cross-origin request error",
+		"message": "пропустить заголовок \"Referer\" после ошибки запроса перекрёстного источника",
 		"description": "Options page label: 'pass \"Referer\" header after a cross-origin request error'"
 	},
 	"optionSaveRawPage": {
