--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -3,14 +3,14 @@
 		"message": "Зберегти всю сторінку в один HTML-файл",
 		"description": "Description of the extension."
 	},
-    "commandSaveSelectedTabs": {
-        "message": "Save the selected tabs or their selected contents",
-        "description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
-    },
-    "commandSaveAllTabs": {
-        "message": "Зберегти всі вкладки",
-        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
-    },
+	"commandSaveSelectedTabs": {
+		"message": "Save the selected tabs or their selected contents",
+		"description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
+	},
+	"commandSaveAllTabs": {
+		"message": "Зберегти всі вкладки",
+		"description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+	},
 	"menuSavePage": {
 		"message": "Зберегти сторінку з допомогою SingleFileZ",
 		"description": "Menu entry: 'Save page with SingleFileZ'"
@@ -18,7 +18,7 @@
 	"menuSaveWithProfile": {
 		"message": "Save page with profile",
 		"description": "Menu entry: 'Save with profile'"
-	},	
+	},
 	"menuSaveSelectedLinks": {
 		"message": "Save selected links",
 		"description": "Menu entry: 'Save selected links'"
@@ -227,10 +227,10 @@
 		"message": "create a root directory",
 		"description": "Options page label: 'create a root directory'"
 	},
-    "optionSelfExtractingArchive": {
-        "message": "create self extracting archives",
-        "description": "Options page label: 'create self extracting archives'"
-    },
+	"optionSelfExtractingArchive": {
+		"message": "create self extracting archives",
+		"description": "Options page label: 'create self extracting archives'"
+	},
 	"optionInsertTextBody": {
 		"message": "make text searchable",
 		"description": "Options page label: 'make text searchable'"
@@ -298,6 +298,14 @@
 	"optionRemoveAudio": {
 		"message": "видалити джерела аудіо",
 		"description": "Options page label: 'remove audio sources'"
+	},
+	"optionsDestionationSubTitle": {
+		"message": "Destination",
+		"description": "Options sub-title: 'Destination'"
+	},
+	"optionsBookmarkSubTitle": {
+		"message": "Bookmarks",
+		"description": "Options sub-title: 'Bookmarks'"
 	},
 	"optionsAutoSaveSubTitle": {
 		"message": "Автозбереження",
@@ -406,14 +414,18 @@
 	"optionPassReferrerOnError": {
 		"message": "pass \"Referer\" header after a cross-origin request error",
 		"description": "Options page label: 'pass \"Referer\" header after a cross-origin request error'"
-	},	
+	},
 	"optionSaveRawPage": {
 		"message": "зберегти вихідну сторінку",
 		"description": "Options page label: 'save raw page'"
 	},
+	"optionSaveToFilesystem": {
+		"message": "save to filesystem",
+		"description": "Options page label: 'save to filesystem'"
+	},
 	"optionSaveToGDrive": {
-		"message": "save to Google Drive",
-		"description": "Options page label: 'save to Google Drive'"
+		"message": "upload to Google Drive",
+		"description": "Options page label: 'upload to Google Drive'"
 	},
 	"optionSaveCreatedBookmarks": {
 		"message": "save the page of a newly created bookmark",
@@ -422,6 +434,10 @@
 	"optionReplaceBookmarkURL": {
 		"message": "link the new bookmark to the saved page",
 		"description": "Options page label: 'link the new bookmark to the saved page'"
+	},
+	"optionIgnoredBookmarkFolders": {
+		"message": "ignored folders",
+		"description": "Options page label: 'ignored folders'"
 	},
 	"optionsHelpLink": {
 		"message": "допомога",
