--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -4,7 +4,7 @@
         "description": "Description of the extension."
     },
     "commandSaveSelectedTabs": {
-        "message": "Save the selected tabs or their selected contents",
+        "message": "Zapisz wybrane karty lub ich wybraną zawartość",
         "description": "Command (Ctrl+Shift+Y): 'Save the selected tabs or their selected contents'"
     },
     "commandSaveAllTabs": {
@@ -300,11 +300,11 @@
         "description": "Options page label: 'remove audio sources'"
     },
     "optionsDestionationSubTitle": {
-        "message": "Destination",
+        "message": "Cel",
         "description": "Options sub-title: 'Destination'"
     },
     "optionsBookmarkSubTitle": {
-        "message": "Bookmarks",
+        "message": "Zakładki",
         "description": "Options sub-title: 'Bookmarks'"
     },
     "optionsAutoSaveSubTitle": {
@@ -420,11 +420,11 @@
         "description": "Options page label: 'save raw page'"
     },
     "optionSaveToFilesystem": {
-        "message": "save to filesystem",
+        "message": "zapisuj do systemu plików",
         "description": "Options page label: 'save to filesystem'"
     },
     "optionSaveToGDrive": {
-        "message": "zapisuj na Dysku Google",
+        "message": "przesyłaj na Dysk Google",
         "description": "Options page label: 'upload to Google Drive'"
     },
     "optionSaveCreatedBookmarks": {
@@ -436,7 +436,7 @@
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
     "optionIgnoredBookmarkFolders": {
-        "message": "ignored folders",
+        "message": "ignorowane foldery",
         "description": "Options page label: 'ignored folders'"
     },
     "optionsHelpLink": {
