--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -300,11 +300,11 @@
         "description": "Options page label: 'remove audio sources'"
     },
     "optionsDestionationSubTitle": {
-        "message": "Destination",
+        "message": "目的地",
         "description": "Options sub-title: 'Destination'"
     },
     "optionsBookmarkSubTitle": {
-        "message": "Bookmarks",
+        "message": "书签",
         "description": "Options sub-title: 'Bookmarks'"
     },
     "optionsAutoSaveSubTitle": {
@@ -420,7 +420,7 @@
         "description": "Options page label: 'save raw page'"
     },
     "optionSaveToFilesystem": {
-        "message": "save to filesystem",
+        "message": "保存到文件系统",
         "description": "Options page label: 'save to filesystem'"
     },
     "optionSaveToGDrive": {
@@ -428,7 +428,7 @@
         "description": "Options page label: 'upload to Google Drive'"
     },
     "optionSaveCreatedBookmarks": {
-        "message": "将该页面保存到一个新创建的书签",
+        "message": "创建新书签时保存其对应页面",
         "description": "Options page label: 'save the page of a newly created bookmark'"
     },
     "optionReplaceBookmarkURL": {
@@ -436,7 +436,7 @@
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
     "optionIgnoredBookmarkFolders": {
-        "message": "ignored folders",
+        "message": "忽略文件夹",
         "description": "Options page label: 'ignored folders'"
     },
     "optionsHelpLink": {
