--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -304,7 +304,7 @@
         "description": "Options sub-title: 'Destination'"
     },
     "optionsBookmarkSubTitle": {
-        "message": "Bookmarks",
+        "message": "ブックマーク",
         "description": "Options sub-title: 'Bookmarks'"
     },
     "optionsAutoSaveSubTitle": {
