--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -227,6 +227,10 @@
         "message": "Stammverzeichnis erstellen",
         "description": "Options page label: 'create a root directory'"
     },
+    "optionPassword": {
+        "message": "Passwort",
+        "description": "Options page label: 'password'"
+    },
     "optionSelfExtractingArchive": {
         "message": "Erstellen von selbstextrahierenden Archiven",
         "description": "Options page label: 'create self extracting archives'"
