--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -227,6 +227,10 @@
         "message": "create a root directory",
         "description": "Options page label: 'create a root directory'"
     },
+    "optionPassword": {
+        "message": "contraseña",
+        "description": "Options page label: 'password'"
+    },
     "optionSelfExtractingArchive": {
         "message": "crear archivos autoextraíbles",
         "description": "Options page label: 'create self extracting archives'"
