--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -384,7 +384,7 @@
         "description": "Options page label: 'auto-save on page unload'"
     },
 	"optionAutoSaveDiscard": {
-		"message": "auto-save on tab discard",
+		"message": "在页面丢弃时进行自动保存",
 		"description": "Options page label: 'auto-save on tab discard'"
 	},
     "optionAutoSaveDelay": {
