--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -443,7 +443,11 @@
         "message": "enlazar el nuevo marcador a la página guardada",
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
-    "optionIgnoredBookmarkFolders": {
+    "optionAllowedBookmarkFolders": {
+		"message": "carpetas permitidas",
+		"description": "Options page label: 'allowed folders'"
+	},
+	"optionIgnoredBookmarkFolders": {
         "message": "carpetas ignoradas",
         "description": "Options page label: 'ignored folders'"
     },
