--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -443,7 +443,11 @@
         "message": "lier le nouveau signet à la page sauvegardée",
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
-    "optionIgnoredBookmarkFolders": {
+    "optionAllowedBookmarkFolders": {
+		"message": "dossiers autorisés",
+		"description": "Options page label: 'allowed folders'"
+	},
+	"optionIgnoredBookmarkFolders": {
         "message": "dossiers ignorés",
         "description": "Options page label: 'ignored folders'"
     },
