--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -451,7 +451,11 @@
         "message": "新しいブックマークを保存したページにリンクさせることを可能にする",
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
-    "optionIgnoredBookmarkFolders": {
+    "optionAllowedBookmarkFolders": {
+		"message": "allowed folders",
+		"description": "Options page label: 'allowed folders'"
+	},
+	"optionIgnoredBookmarkFolders": {
         "message": "ignored folders",
         "description": "Options page label: 'ignored folders'"
     },
