--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -443,7 +443,11 @@
         "message": "łącz nową zakładkę z zapisaną stroną",
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
-    "optionIgnoredBookmarkFolders": {
+    "optionAllowedBookmarkFolders": {
+		"message": "allowed folders",
+		"description": "Options page label: 'allowed folders'"
+	},
+	"optionIgnoredBookmarkFolders": {
         "message": "ignorowane foldery",
         "description": "Options page label: 'ignored folders'"
     },
