--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -443,6 +443,10 @@
 		"message": "link the new bookmark to the saved page",
 		"description": "Options page label: 'link the new bookmark to the saved page'"
 	},
+	"optionAllowedBookmarkFolders": {
+		"message": "allowed folders",
+		"description": "Options page label: 'allowed folders'"
+	},
 	"optionIgnoredBookmarkFolders": {
 		"message": "ignored folders",
 		"description": "Options page label: 'ignored folders'"
