--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -443,7 +443,11 @@
         "message": "將新書籤的鏈接指向已保存頁面",
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
-    "optionIgnoredBookmarkFolders": {
+    "optionAllowedBookmarkFolders": {
+		"message": "allowed folders",
+		"description": "Options page label: 'allowed folders'"
+	},
+	"optionIgnoredBookmarkFolders": {
         "message": "忽略文件夾",
         "description": "Options page label: 'ignored folders'"
     },
