add option "set content security policy"

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -427,7 +427,11 @@
         "message": "save raw page",
         "description": "Options page label: 'save raw page'"
     },
-    "optionSaveToFilesystem": {
+    "optionInsertMetaCSP": {
+		"message": "set content security policy",
+		"description": "Options page label: 'set content security policy'"
+	},
+	"optionSaveToFilesystem": {
         "message": "save to filesystem",
         "description": "Options page label: 'save to filesystem'"
     },
