--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -427,7 +427,11 @@
         "message": "保存原始页面",
         "description": "Options page label: 'save raw page'"
     },
-    "optionSaveToFilesystem": {
+    "optionInsertMetaCSP": {
+		"message": "set content security policy",
+		"description": "Options page label: 'set content security policy'"
+	},
+	"optionSaveToFilesystem": {
         "message": "保存到文件系统",
         "description": "Options page label: 'save to filesystem'"
     },
